--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,8 @@
 title: 控损工作室
+safe: true
 highlighter: rouge
+gist:
+  noscript: false
 kramdown:
   math_engine: mathjax
   syntax_highlighter: rouge
